--- a/README
+++ b/README
@@ -36,6 +36,12 @@ Available methods are:
                               Thresholding for EEG artifact Rejection.
                               Journal of Neuroscience Methods, 192(1),
                               152-162. doi:16/j.jneumeth.2010.07.015)
+              MARA selection: use MARA classification engine to select components
+                              (see Winkler I, Haufe S, Tangermann M.
+                              2011. Automatic Classification of
+                              Artifactual ICA-Components for Artifact
+                              Removal in EEG Signals. Behavioral and
+                              Brain Functions. 7:30.)
 
    SASICA is a software that helps select independent components of
    the electroencephalogram based on various signal measures.
